force-app/main/default/objects/Account/fields/BairroEntrega__c.field-meta.xml
<CustomField>
    <fullName>BairroEntrega__c</fullName>
    <label>Bairro de Entrega</label>
    <length>255</length>
    <type>Text</type>
</CustomField>