force-app/main/default/objects/Account/fields/CEP__c.field-meta.xml
<CustomField>
    <fullName>CEP__c</fullName>
    <label>CEP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>