force-app/main/default/objects/Account/fields/CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CNPJ__c</fullName>
    <description>Campo para CNPJ.</description>
    <label>CNPJ</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>