force-app/main/default/objects/Account/fields/ComplementoEntrega__c.field-meta.xml
<CustomField>
    <fullName>ComplementoEntrega__c</fullName>
    <label>Complemento de Entrega</label>
    <length>255</length>
    <type>Text</type>
</CustomField>