force-app/main/default/objects/Account/fields/Consultor__c.field-meta.xml
<CustomField>
    <fullName>Consultor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultor</label>
    <referenceTo>Consultor__c</referenceTo>
    <relationshipLabel>Clientes</relationshipLabel>
    <relationshipName>Contas</relationshipName>
    <type>Lookup</type>
</CustomField>