force-app/main/default/objects/Account/fields/CPF__c.field-meta.xml
<CustomField>
    <fullName>CPF__c</fullName>
    <description>Campo para CPF.</description>
    <label>CPF</label>
    <length>15</length>
    <type>Text</type>
</CustomField>