force-app/main/default/objects/Account/fields/DataModificacao__c.field-meta.xml
<CustomField>
    <fullName>DataModificacao__c</fullName>
    <label>Data de Modificação</label>
    <type>DateTime</type>
</CustomField>