force-app/main/default/objects/Account/fields/DataRegistro__c.field-meta.xml
<CustomField>
    <fullName>DataRegistro__c</fullName>
    <label>Data de Registro</label>
    <type>DateTime</type>
</CustomField>