force-app/main/default/objects/Account/fields/EmailProcurador__c.field-meta.xml
<CustomField>
    <fullName>EmailProcurador__c</fullName>
    <label>Email do Procurador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>