force-app/main/default/objects/Account/fields/EstadoInstalacao__c.field-meta.xml
<CustomField>
    <fullName>EstadoInstalacao__c</fullName>
    <label>Estado de Instalação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>