force-app/main/default/objects/Account/fields/Formata_CPF__c.field-meta.xml
<CustomField>
    <fullName>Formata_CPF__c</fullName>
    <formula>TRIM(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(CPF__c, &apos;.&apos;, &apos;&apos;), &apos;-&apos;, &apos;&apos;), &apos;/&apos;, &apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formata CPF</label>
    <type>Text</type>
</CustomField>