force-app/main/default/objects/Account/fields/IdBitrix__c.field-meta.xml
<CustomField>
    <fullName>IdBitrix__c</fullName>
    <label>Id no Bitrix</label>
    <length>6</length>
    <type>Text</type>
</CustomField>