force-app/main/default/objects/Account/fields/IdExternoConsultor__c.field-meta.xml
<CustomField>
    <fullName>IdExternoConsultor__c</fullName>
    <description>Armazenar Id Externo do Consultor que será passado via integração, e usar para buscar por registro correspondente</description>
    <label>Id Externo do Consultor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>