force-app/main/default/objects/Account/fields/IdVirtualOffice__c.field-meta.xml
<CustomField>
    <fullName>IdVirtualOffice__c</fullName>
    <description>Campo Id no virtual office.</description>
    <externalId>true</externalId>
    <label>Id no Gerador de Oportunidades</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>