force-app/main/default/objects/Account/fields/LoginVirtualOffice__c.field-meta.xml
<CustomField>
    <fullName>LoginVirtualOffice__c</fullName>
    <description>Campo de login no virtual office.</description>
    <label>Login no virtual office</label>
    <length>70</length>
    <type>Text</type>
</CustomField>