force-app/main/default/objects/Account/fields/MunicipioEntrega__c.field-meta.xml
<CustomField>
    <fullName>MunicipioEntrega__c</fullName>
    <label>Municipio de Entrega</label>
    <length>255</length>
    <type>Text</type>
</CustomField>