force-app/main/default/objects/Account/fields/MunicipioInstalacao__c.field-meta.xml
<CustomField>
    <fullName>MunicipioInstalacao__c</fullName>
    <label>Município de Instalação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>