force-app/main/default/objects/Account/fields/NumeroIdentificacao__c.field-meta.xml
<CustomField>
    <fullName>NumeroIdentificacao__c</fullName>
    <label>Numero de Identificação</label>
    <length>200</length>
    <type>Text</type>
</CustomField>