force-app/main/default/objects/Account/fields/NumeroRegistroProcurador__c.field-meta.xml
<CustomField>
    <fullName>NumeroRegistroProcurador__c</fullName>
    <label>Número de Registro do Procurador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>