force-app/main/default/objects/Account/fields/NumeroRua__c.field-meta.xml
<CustomField>
    <fullName>NumeroRua__c</fullName>
    <label>Número da Rua</label>
    <length>255</length>
    <type>Text</type>
</CustomField>