force-app/main/default/objects/Account/fields/NumeroRuaCobranca__c.field-meta.xml
<CustomField>
    <fullName>NumeroRuaCobranca__c</fullName>
    <label>Número da Rua de Cobrança</label>
    <length>255</length>
    <type>Text</type>
</CustomField>