force-app/main/default/objects/Account/fields/NumeroRuaEntrega__c.field-meta.xml
<CustomField>
    <fullName>NumeroRuaEntrega__c</fullName>
    <label>Número da Rua de Entrega</label>
    <length>255</length>
    <type>Text</type>
</CustomField>