force-app/main/default/objects/Account/fields/Procurador__c.field-meta.xml
<CustomField>
    <fullName>Procurador__c</fullName>
    <label>Procurador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>