force-app/main/default/objects/Account/fields/SeCPFouCNPJ__c.field-meta.xml
<CustomField>
    <fullName>SeCPFouCNPJ__c</fullName>
    <description>Campo para pegar ou CPF ou CNPJ.</description>
    <formula>IF( CNPJ__c =null,SUBSTITUTE(SUBSTITUTE(CPF__c, &quot;-&quot;, null),&quot;.&quot;, null),
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(CNPJ__c , &quot;-&quot;, null),&quot;.&quot;, null), &quot;/&quot;,null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SeCPFouCNPJ</label>
    <type>Text</type>
</CustomField>