force-app/main/default/objects/Account/fields/SucessoIntegracaoVO__c.field-meta.xml
<CustomField>
    <fullName>SucessoIntegracaoVO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sucesso Integração VO</label>
    <type>Checkbox</type>
</CustomField>