force-app/main/default/objects/Account/fields/TelefoneProcurador__c.field-meta.xml
<CustomField>
    <fullName>TelefoneProcurador__c</fullName>
    <label>Telefone do Procurador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>