force-app/main/default/objects/Account/fields/TipoUsuario__c.field-meta.xml
<CustomField>
    <fullName>TipoUsuario__c</fullName>
    <label>Tipo do Usuário</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>