force-app/main/default/objects/Account/recordTypes/ClientePessoaFisica.recordType-meta.xml
<RecordType>
    <fullName>ClientePessoaFisica</fullName>
    <active>true</active>
    <description>Tipo de registro para cliente pessoa física.</description>
    <label>Cliente Pessoa Física</label>
</RecordType>