force-app/main/default/objects/Account/recordTypes/ClientePessoaJuridica.recordType-meta.xml
<RecordType>
    <fullName>ClientePessoaJuridica</fullName>
    <active>true</active>
    <description>Tipo de registro para cliente pessoa jurídica.</description>
    <label>Cliente Pessoa Jurídica</label>
</RecordType>