force-app/main/default/objects/Account/recordTypes/Parceiro.recordType-meta.xml
<RecordType>
    <fullName>Parceiro</fullName>
    <active>true</active>
    <description>Tipo de registro para parceiros franqueados.</description>
    <label>Parceiro</label>
</RecordType>