force-app/main/default/objects/Account/validationRules/MascaraCEPCobranca.validationRule-meta.xml
<ValidationRule>
    <fullName>MascaraCEPCobranca</fullName>
    <active>false</active>
    <description>Para inserir o CEP é necessário digita-lo no seguinte formato xxxxx-xxx.</description>
    <errorConditionFormula>!REGEX( BillingPostalCode ,&quot;^(\\d{5}(\\-\\d{3})?)?$&quot;)</errorConditionFormula>
    <errorDisplayField>BillingPostalCode</errorDisplayField>
    <errorMessage>Para inserir o CEP é necessário digita-lo no seguinte formato xxxxx-xxx.</errorMessage>
</ValidationRule>