force-app/main/default/objects/Account/validationRules/MascaraCEPEntrega.validationRule-meta.xml
<ValidationRule>
    <fullName>MascaraCEPEntrega</fullName>
    <active>false</active>
    <description>Para inserir o CEP é necessário digita-lo no seguinte formato xxxxx-xxx.</description>
    <errorConditionFormula>!REGEX( ShippingPostalCode ,&quot;^(\\d{5}(\\-\\d{3})?)?$&quot;)</errorConditionFormula>
    <errorDisplayField>ShippingPostalCode</errorDisplayField>
    <errorMessage>Para inserir o CEP é necessário digita-lo no seguinte formato xxxxx-xxx.</errorMessage>
</ValidationRule>