force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Email__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>Consultor__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todas as contas</label>
</ListView>