force-app/main/default/objects/Account/listViews/Contas_parceiras.listView-meta.xml
<ListView>
    <fullName>Contas_parceiras</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>2/15/2023 12:00 AM</value>
    </filters>
    <label>Contas parceiras</label>
</ListView>